# caad-erp

./: .gitignore  CONTRIBUTING.md  README.md  config.ini  pyproject.toml  setup_excel.py
docs/: DEVELOPER_GUIDE.md
examples/: 01_basic_workflow.md  02_credit_workflow.md  03_fix_mistake_workflow.md  04_advanced_workflow.md  README.md
src/caad_erp/: __init__.py  cli.py  config.ini  constants.py  core_logic.py  data_manager.py  main.py  setup_excel.py
tests/: conftest.py  test_cli.py  test_core_logic.py  test_data_manager.py  test_integration_layers.py
